@@ -2,7 +2,7 @@
 ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
 
 AC_INIT(metacity)
-AM_INIT_AUTOMAKE(nimbus, 0.1.6)
+AM_INIT_AUTOMAKE(nimbus, 0.1.8)
 DISTDIR=${PACKAGE}-${VERSION}
 AM_MAINTAINER_MODE
 
