@@ -1,3 +1,9 @@
+2011-06-24 Erwann Chenede - <erwann.chenede@oracle.com>
+
+  * gtk-engine/nimbus_style.c: fix for 17274 (TD not respecting theming pb)
+    and 7027504
+  * configure.in : bumped release
+
 2010-10-14 Erwann Chenede - <erwann.chenede@oracle.com>
 
   * gtk-engine/nimbus_style.c: fix for 16939
